--- a/publish.yaml
+++ b/publish.yaml
@@ -1,10 +1,13 @@
-Type: Application
-Name: start-repack-apk
-Version: 0.0.8
+Edition: 3.0.0
+Type: Project
+Name: start-repack-apk-v3
+Version: 0.0.1
 Provider:
   - 阿里云
 Description: 基于 CDN + Custom 运行时实现 apk 实时打渠道包
-HomePage: https://github.com/devsapp/start-repack-apk
+HomePage: https://github.com/devsapp/repackAPK
+Organization: 阿里云函数计算（FC）
+Effective: Public
 Tags:
   - apk 渠道游戏包实时打包
   - apk 渠道实时打包
@@ -18,7 +21,7 @@ Service:
   硬盘挂载:
     Authorities:
       - AliyunNASFullAccess
-  VPC:
+  专有网络:
     Authorities:
       - AliyunVPCFullAccess
   其它:
@@ -30,7 +33,6 @@ Parameters:
   additionalProperties: false # 不允许增加其他属性
   required: # 必填项
     - region
-    - serviceName
     - functionName
   properties:
     region:
@@ -53,18 +55,15 @@ Parameters:
         - ap-southeast-3
         - ap-southeast-5
         - ap-northeast-1
+        - ap-northeast-2
         - eu-central-1
         - eu-west-1
         - us-west-1
         - us-east-1
         - ap-south-1
-    serviceName:
-      title: 服务名
-      type: string
-      default: apk-repack
-      description: 应用所属的函数计算服务
     functionName:
       title: 函数名
       type: string
-      default: get-apk
-      description: 应用的函数名称
+      default: get-apk-${default-suffix}
+      pattern: "^[a-zA-Z_][a-zA-Z0-9-_]{0,127}$"
+      description: 应用的函数名称, 只能包含字母、数字、下划线和中划线。不能以数字、中划线开头。长度在 1-128 之间
